# cotainr

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  Makefile  README.md  cotainr-easyconfig.eb  cotainr_idea.md  demo.txt  docs-requirements.txt  opensuse.def  pyproject.toml  pytest.ini  pytorch_lumig.md  requirements-dev.txt  ruff.toml  test-requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: CD_release.yml  CI_build_docker_images.yml  CI_build_push.yml  CI_dev_container.yml  CI_dockerimages_push.yml  CI_on_Push_Test_dockerimages_EXAMPLE_disabled.yml  CI_pull_request.yml  CI_push.yml  CI_push_AMD64.yml  CI_push_determine_workflow.yml  CI_release.yml  Container-inputs.yml  SCHED_build_docker.yml  SCHED_build_docker_AMD64.yml  SCHED_build_docker_ARM.yml  SCHED_docs_linkcheck.yml  get_container_to_use.sh  matrix.json  matrix_AMD64.json  matrix_AMD64.yml  matrix_AMD64_limited.json  matrix_ARM.json  matrix_ARM_limited.json  matrix_limited.json  trigger_testing.sh
.github/workflows/dockerfiles/: Dockerfile
builder/: README.md  README.mk  builder.py  cli.py  container.py  pack.py  package.py  util.py
builder/workers/: BuildWorker.py  ReportWorker.py
config/: README.md  matrix_AMD64.yml  matrix_ARM.yml
cotainr/: README.md  __init__.py  __main__.py  _version.py  cli.py  container.py  pack.py  pip.py  system.py  tracing.py  util.py
cotainr/tests/: conftest.py  test__init__.py  test__main__.py  test__version.py  test_end_to_end.py
cotainr/tests/cli/: data.py  patches.py  stubs.py  test_build.py  test_builder_cli.py  test_cli_utils.py  test_cotainr_cli.py  test_info.py  test_main.py
cotainr/tests/container/: .#test_singularity_sandbox.py  data.py  patches.py  test_singularity_sandbox.py
cotainr/tests/pack/: integrations.py  patches.py  stubs.py  test_conda_install.py  test_pip_install.py
cotainr/tests/system/: patches.py  systems_2.json  test_system.py
cotainr/tests/tracing/: data.py  patches.py  stubs.py  test_coloured_output_formatter.py  test_console_spinner.py  test_log_dispatcher.py  test_log_settings.py  test_message_spinner.py  test_stream_write_proxy.py
cotainr/tests/util/: patches.py  test_answer_is_yes.py  test_answer_yes.py  test_get_systems.py  test_stream_subprocess.py
demo/: bash_snippets.rtf  bash_snippets.sh  cotainr_idea.md  my_conda_env.rtf  my_conda_env.yml  my_script.py  pytorch_lumig.md
doc/: Makefile  conf.py  create_switcher.py  getting_started.rst  index.rst  prepare_release.py  release_notes.rst  test_prepare_release.py
doc/_static/: switcher.json
doc/_static/css/: cotainr.css
doc/_templates/: cotainr_footer.html
doc/api_reference/: index.rst
doc/development/: cli_internals.rst  development_environment.rst  docker_dev_env_VSC.rst  documentation.rst  index.rst  maintenance.rst  pypi_package.rst  releasing.rst  style_guide.rst  systems.rst  technical_motivation.rst  test_suite.rst  test_suite_ci_cd.rst  tracing_logging.rst
doc/release_notes/: 2022.12.0.md  2023.01.0.md  2023.02.0.md  2023.11.0.md  2024.10.0.md  2025.03.0.md  2025.7.0.md  2025.7.1.md  create_release_notes_list.py  index.rst  release_list.rst  release_note.md.template
doc/user_guide/: conda_env.rst  index.rst  pip_env.rst
dockerfiles/: Dockerfile  Dockerfile-amd64  Dockerfile-arm64
example_files/: README_pytorch_rocm_example.md  matmul_example.py  pytorch_gpu_availability_check.py  pytorch_gputest.py  pytorch_multigpu.py  test_conda_env.yml
examples/LUMI/conda_dedalus_mpich/: README.md  py311_dedalus.yml  py311_dedalus_basic.yml  run_dedalus_shear_flow.sh
examples/LUMI/conda_dedalus_mpich/envvar-cc-mpicc/: build.sh  envvar_cc_mpicc_activate.sh  envvar_cc_mpicc_deactivate.sh  meta.yaml
examples/LUMI/conda_dedalus_mpich/local_conda_channel/: channeldata.json  index.html
examples/LUMI/conda_mpi4py_mpich/: README.md  lumi-singularity-bindings.sh  lumi_mpi4py_osu_results.ipynb  mpi_hello_world.py  py310_mpi4py_mpich.yml  py312_jupyter.yml  run_cotainr_bind_mpi_hello_world.sh  run_cotainr_bind_osu.sh  run_cotainr_hybrid_bw.sh  run_cotainr_hybrid_mpi_hello_world.sh  run_cotainr_hybrid_osu.sh  run_cray_python_bw.sh  run_cray_python_latency.sh  run_cray_python_mpi_hello_world.sh  run_cray_python_osu.sh  run_lumi_sif_mpi_hello_world.sh  run_lumi_sif_osu.sh  run_lumisif_mpi_hello_world.sh  run_lumisif_osu.sh
examples/LUMI/conda_mpi4py_mpich/containers/: build_containers.sh  py310_mpich3_conda_mpi4py.yml  py310_mpich3_pip_mpi4py.yml  py310_mpich4_conda_mpi4py.yml  py310_mpich4_pip_mpi4py.yml
examples/LUMI/conda_mpi4py_mpich/lumi_mpi_hello_world_results/: output_mpi4py-mpi-hello-world-cotainr-bind.txt  output_mpi4py-mpi-hello-world-cotainr-hybrid.txt  output_mpi4py-mpi-hello-world-cray-python.txt  output_mpi4py-mpi-hello-world-lumi-sif.txt
examples/LUMI/conda_mpi4py_mpich/lumi_osu_results/: mpi4py-cotainr-bind-osu-allgather-multi-cotainr-mpich3-pip-mpi4py.sif.txt  mpi4py-cotainr-bind-osu-allgather-multi-cotainr-mpich4-pip-mpi4py.sif.txt  mpi4py-cotainr-bind-osu-allgather-single-cotainr-mpich3-pip-mpi4py.sif.txt  mpi4py-cotainr-bind-osu-allgather-single-cotainr-mpich4-pip-mpi4py.sif.txt  mpi4py-cotainr-bind-osu-bw-multi-cotainr-mpich3-pip-mpi4py.sif.txt  mpi4py-cotainr-bind-osu-bw-multi-cotainr-mpich4-pip-mpi4py.sif.txt  mpi4py-cotainr-bind-osu-bw-single-cotainr-mpich3-pip-mpi4py.sif.txt  mpi4py-cotainr-bind-osu-bw-single-cotainr-mpich4-pip-mpi4py.sif.txt  mpi4py-cotainr-bind-osu-latency-multi-cotainr-mpich3-pip-mpi4py.sif.txt  (+27 more)
examples/LUMI/conda_pytorch_rocm/: README.md  minimal_pytorch.yml  py311_rocm542_pytorch.yml  py39_pytorch_rocm.yml  pytorch_dcgan.py  pytorch_gputest.py  pytorch_multigpu_torchrun.py  pytorch_singlegpu_gputest.py  run_dcgan.sh  run_gputest.sh  run_multigpu_torchrun.sh  run_singlegpu_gputest.sh
examples/LUMI/conda_pytorch_rocm_dcgan/: dcgan_run.sh
examples/LUMI/sfantao_pytorch/: README.md  py312_rocm56_pytorch.yml  run_cotainr_docker_base_mnist_example.sh  run_cotainr_lumisif_base_mnist_example.sh  run_lumisif_mnist_example.sh
(+32 files in other folders)
