[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cotainr"
dynamic = ["version"]
dependencies = []
requires-python = ">=3.9"
authors = [
    {name = "Christian Schou Oxvig"},
    {name = "René Løwe Jacobsen"},
    {name = "Eske Christiansen"},
    {name = "Joachim Sødequist"},
    {name = "Tor Skovsgaard"},
    {name = "Julius Roeder"},
]
maintainers = [
    {name = "DeiC HPC"},
    # {name = "Christian Schou Oxvig", email = "christian.oxvig@deic.dk"},
    # {name = "Joachim Sødequist", email = "joachim.soedequist@deic.dk"},
    # {name = "Tor Skovsgaard", email = "tor.skovsgaard@deic.dk"},
    # {name = "Julius Roeder", email = "julius.roeder@deic.dk"},
]
description = "A user space Apptainer/Singularity container builder"
readme = "README.md"
license = "EUPL-1.2"
license-files = { paths = ["LICENSE"] }
keywords = ["hpc", "container", "singularity", "apptainer", "conda"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    #"Topic :: Software Development :: HPC Tools",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
cotainr = "cotainr.cli:main"

[project.urls]
Documentation = "https://cotainr.readthedocs.io/en/stable/"
Repository = "https://github.com/DeiC-HPC/cotainr.git"
"Bug Tracker" = "https://github.com/DeiC-HPC/cotainr/issues"
Changelog = "https://cotainr.readthedocs.io/en/stable/release_notes/index.html"

[dependency-groups]
tests = [
    "pytest-cov>=2.10",
    "pytest>=6.0"
]
lint = [
    "pre-commit>=4.1.0",
]
docs = [
    "pydata-sphinx-theme>=0.13.3",
    "sphinx-design>=0.5.0",
    "myst-parser>=2.0.0",
    "numpydoc>=1.5.0"
]
dev = [{include-group = "tests"}, {include-group = "lint"}, {include-group = "docs"}]

[tool.hatch.version]
path = "cotainr/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/cotainr",
    "/doc",
    "LICENSE",
    "pyproject.toml",
    ".pre-commit-config.yaml",
    ".readthedocs.yml",
]
exclude = [
    "/examples",
    "/bin"
]

[tool.hatch.build.targets.wheel]
exclude = [
    "/cotainr/tests"
]

[[tool.uv.index]]
explicit=true
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

[tool.ruff]
target-version = "py39"
line-length = 88

lint.extend-select = [
    "B", # flake8-bugbear
    "D", # docstrings
    "E", # pycodestyle errors
    "F", # Pyflakes
    "FLY", # F-strings
    "I", # import ordering
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
lint.ignore = [
    "E501",  # Automatic conversion of .format() to f-strings
    "W191",  # tab-indentation
    "E111",  # indentation-with-invalid-multiple
    "E114",  # indentation-with-invalid-multiple-comment
    "E117",  # over-indented
]
lint.exclude = [
    "examples/**/*.ipynb"
]

[tool.ruff.lint.extend-per-file-ignores]
"cotainr/tests/**/test_*.py" = [
    # The non-standard way to import py.test fixtures in
    # tests means we will need to ignore "imported but not used"
    # as well as argument shadowing tests in test modules.
    "F401",
    "F811",
]
"examples/**.py" = [
    "D",  # docstring formatting doesn't matter that much
]
"cotainr/tests/**.py" = [
    "D",  # docstring formatting doesn't matter that much
    "S101", # assertions are OK in tests
]
"bin/cotainr" = [
    "D",  # docstring formatting doesn't matter that much
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
exclude = [
    "examples/**/*.ipynb",
]

[tool.coverage.run]
branch = true
source = ["cotainr"]
omit = [
     "cotainr/tests/*",
     ".venv/*",
	]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "-ra",
    "-l",
    "--cov",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = [
    "cotainr/tests",
]
junit_suite_name = [
    "cotainr_test_suite",
]
markers = [
    "conda_integration: marks tests of integration with conda/mamba",
    "endtoend: marks end-to-end test cases",
    "singularity_integration: marks tests of integration with singularity",
]
